--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.516.0",
 		"better-sqlite3": "^11.8.0",
 		"drizzle-orm": "^0.40.0"
 	}
